--- a/part1/ws-blog-client/package.json
+++ b/part1/ws-blog-client/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "react-use-websocket": "^2.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
